@@ -1,0 +1,32 @@
+/*
+ * import.h
+ *
+ * This file is part of cvltonemap, a tone mapping tool using the CVL library.
+ *
+ * Copyright (C) 2008  Martin Lambers <marlam@marlam.de>
+ *
+ *   This program is free software; you can redistribute it and/or modify
+ *   it under the terms of the GNU General Public License as published by
+ *   the Free Software Foundation; either version 3 of the License, or
+ *   (at your option) any later version.
+ *
+ *   This program is distributed in the hope that it will be useful,
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *   GNU General Public License for more details.
+ *
+ *   You should have received a copy of the GNU General Public License
+ *   along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+#ifndef IMPORT_H
+#define IMPORT_H
+
+#include <cvl/cvl.h>
+
+extern "C" 
+{
+    void import(const char *filename, cvl_frame_t **frame);
+}
+
+#endif
