@@ -2,6 +2,8 @@
 
 	* gnulib/*: Add gnulib module pipe.
 	* configure.ac, build-aux/compile: Add AM_PROG_CC_C_O macro.
+	* src/cvltonemap.cpp, src/import.h, src/import.c, src/Makefile.am: Add
+	input filters for HDR file formats that are supported by the pfstools.
 
 2008-07-25  Martin Lambers <marlam@marlam.de>
 
